--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,5 +14,21 @@
 }
 
 #footer li{
-    list-style-type: none; 
+    list-style-type: none;
+     
 }
+
+.f-text{
+    font-size: 0.65rem;
+    color: #9b9b9b;
+
+}
+
+#footer-a ul{
+    list-style-type: none;
+    
+}
+
+#footer-a ul li{
+     margin-top: 4px;
+    
