--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,24 @@
 .price-li ul li{
     margin-top: 4px;
 }
+
+.sup-li ul{
+    list-style-type: none;
+
+}
+
+.sup-li ul li a{
+    text-decoration: none;
+    color: #387ed1;
+    font-size: 14px;
+}
+
+.sup-li ul li {
+
+    margin-top: 8px;
+}
+
+.sup-li p {
+    margin-top: 8px;;
+    margin-left: 20px;
+}
